--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.show-sql= true
 spring.h2.console.enabled= true
 spring.h2.console.path=/h2-console
 spring.data.rest.base-path=/api
+server.port = 9093
