--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.datasource.password=p002668682dc3a0b5aa3d1cd526b07ac0693ae9c7394ddf0aed11
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.datasource.url=${SPRING_DATASOURCE_URL} 
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME} 
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD} 
